_sass/_layout.scss
/**
 * Site header
 */

.site-header {
    min-height: 56px;
    background-color: $grey-1;
    // Positioning context for the mobile navigation icon
    position: relative;
}

.site-title {
    // @extend %font-title
    @extend %font-title;
    text-decoration: none;
    font-size: 1.2em;
    line-height: 56px;
    margin-bottom: 0;
    float: left;
    font-weight: 900;
    color: $grey-4;

    &,
    &:visited {
        color: $grey-4;
    }
}

.site-nav {
    float: right;
    line-height: 56px;

    .menu-icon {
        display: none;
    }

    .page-link {
        color: $text-color;
        line-height: $base-line-height;
        text-decoration: none;
        // Gaps between nav items, but not on the first one
        &:not(:first-child) {
            margin-left: 20px;
        }
    }

    @include media-query($media-sm) {
        position: absolute;
        top: 9px;
        right: 30px;
        background-color: $background-color;
        border: 1px solid $grey-color-light;
        border-radius: 5px;
        text-align: right;

        .menu-icon {
            display: block;
            float: right;
            width: 36px;
            height: 26px;
            line-height: 0;
            padding-top: 10px;
            text-align: center;

            > svg {
                width: 18px;
                height: 15px;

                path {
                    fill: $grey-color-dark;
                }
            }
        }

        .trigger {
            clear: both;
            display: none;
        }

        &:hover .trigger {
            display: block;
            padding-bottom: 5px;
        }

        .page-link {
            display: block;
            padding: 5px 10px;
        }
    }
}

.header-img {
        background-image: url("/images/logo.svg");
        height: 2em;
        width: 2em;
        margin: 12px 0px 0px 6px;
        display: inline-block;
        background-size: 100%;
        float: left;
}

/**
 * Site footer
 */
.site-footer {
    border-top: 1px solid $grey-color-light;
    padding: $spacing-unit 0;
}

.footer-heading {
    @extend %font-copy;
    font-size: 18px;
    margin-bottom: $spacing-unit / 2;
}

.contact-list,
.social-media-list {
    list-style: none;
    margin-left: 0;
}

.footer-col-wrapper {
    font-size: 15px;
    color: $grey-color;
    margin-left: -$spacing-unit / 2;
    @extend %clearfix;
}

.footer-col {
    float: left;
    margin-bottom: $spacing-unit / 2;
    padding-left: $spacing-unit / 2;
}

.footer-col-1 {
    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
    width:         calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
    width:         calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
    width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($media-md) {
    .footer-col-1,
    .footer-col-2 {
        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
        width:         calc(50% - (#{$spacing-unit} / 2));
    }

    .footer-col-3 {
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}

@include media-query($media-sm) {
    .footer-col {
        float: none;
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}



/**
 * Page content
 */
.page-content {
    padding: $spacing-unit 0;
    z-index: 3;
    background-color: white;
    transform: translateX(0%);
}

.page-heading {
    font-size: 20px;
}

.post-list {
    margin-left: 0;
    list-style: none;

    > li {
        margin-bottom: $spacing-unit;
    }
}

.post-meta {
    font-weight: 300;
    text-transform: uppercase;
    font-size: $small-font-size;
    color: $grey-color;
}

.post-link {
    @extend %font-title;
    display: block;
    font-size: 2.2em;
    font-weight: 700;
    text-decoration: none;

    @include media-query($media-lg) {
    font-size: 2em;

    }

    @include media-query($media-md) {
    font-size: 1.5em;

    }
        @include media-query($media-sm) {
    font-size: 1em;
    }

}

.banner {
    background-color: $grey-1;
    height: 250px;
    text-align: center;
    border-bottom-style: solid;
    border-bottom-width: 2px;
    border-bottom-color: $brand-secondary;


    h1{
        @extend %font-title; 
        color: $grey-4;
        font-size: 4em;
        font-weight: 900;
        @include media-query($media-sm) {
        font-size: 3em;
    }
    }

    p {
        @extend %font-copy;
         font-style: italic;
        font-weight: 400;
        font-size: 1em;
        color: white;
        padding-top: -100px;
        padding-left: 1%;
    }
}

.banner--text {
            position: relative;
            top: 50%;
            transform: translateY(-40%);
            clip: rect(110px, 160px, 170px, 60px);
            }

.banner--icon {
        position:relative;
        height: 60px;
        transform: translateY(40%);
}


// Pseudo Logo
// .home-banner--text::before {
//     content: url(/images/logo.svg);
//     text-align: center;
//     height: 100px;
// }

/**
 * Posts
 */
.post-header {
    margin-bottom: $spacing-unit;
}

.post-title {
    @extend %font-title;
    line-height: 1;
    font-size: 3em;
    font-weight: 700;

    @include media-query($media-md) {
        font-size: 2.5em;
    }

        @include media-query($media-sm) {
        font-size: 2em;
    }
}

.post-content {
    margin-bottom: $spacing-unit;

    h2 {
        font-size: 32px;
        font-weight: 700;

        @include media-query($media-md) {
            font-size: 28px;
        }
    }

    h3 {
        font-size: 26px;
        font-weight: 700;
        @include media-query($media-md) {
            font-size: 22px;
        }
    }

    h4 {
        font-size: 20px;
        font-weight: 400;
        @include media-query($media-md) {
            font-size: 18px;
        }
    }
}

